Adding report: process block control concept.

--- a/Report_System_Programming/main_system_programming.tex
+++ b/Report_System_Programming/main_system_programming.tex
@@ -347,6 +347,19 @@ In \autoref{fig:processes:processes_states} we have the different state, and als
 
 \end{itemize}
 
+\newpage
+\section{Process Control Block}
+
+Each process is represented by the OS by a process control block (PCB). An example is shown in \autoref{fig:processes:pcb_example}.
+
+
+\begin{figure}[h]
+\centering
+\includegraphics[width = 0.3\textwidth, frame]{Figures/processes/pcb_example}
+\caption{Process control block example}
+\label{fig:processes:pcb_example}
+\end{figure}
+
 
 
 \newpage
